Added java option in Dockerfile